--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/overview-features.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/overview-features.html
@@ -50,8 +50,8 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                266,
-                2,
+                268,
+                0,
                 0,
                 0,
                 0
@@ -106,8 +106,8 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                37,
-                2
+                39,
+                0
             ],
             backgroundColor: [
                 "#00B000",
@@ -153,8 +153,8 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                   8,
-                   2
+                   10,
+                   0
                ],
                backgroundColor: [
                 "#00B000",
@@ -230,7 +230,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>TMDT</td>
         <td>1</td>
-      <td>28 Oct 2023, 21:48</td>
+      <td>20 Nov 2023, 22:50</td>
     </tr>
   </tbody>
 </table>
@@ -338,28 +338,28 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">2</td>
 
-        <td class="duration" data-value="16417514100">16.417</td>
+        <td class="duration" data-value="17583858500">17.583</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
         <td class="tagname"><a href="report-feature_1_2716132006.html">Admin Create New Product</a></td>
 
-        <td      class="passed"    >62</td>
-        <td      class="failed"    >1</td>
+        <td      class="passed"    >63</td>
+        <td >0</td>
         <td >0</td>
         <td >0</td>
         <td >0</td>
         <td class="total">63</td>
 
-        <td  class="passed"    >7</td>
-        <td  class="failed"    >1</td>
+        <td  class="passed"    >8</td>
+        <td >0</td>
         <td class="total">8</td>
 
-        <td class="duration" data-value="75155883900">1:15.155</td>
-        <td class="failed">Failed</td>
+        <td class="duration" data-value="70362364900">1:10.362</td>
+        <td class="passed">Passed</td>
       </tr>
       <tr>
-        <td class="tagname"><a href="report-feature_2_2637572631.html">Admin Add New Product</a></td>
+        <td class="tagname"><a href="report-feature_2_2637572631.html">Admin DeleteProduct</a></td>
 
         <td      class="passed"    >8</td>
         <td >0</td>
@@ -372,11 +372,11 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="5017452600">5.017</td>
+        <td class="duration" data-value="5631280400">5.631</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
-        <td class="tagname"><a href="report-feature_3_1708112600.html">Admin Add New Product</a></td>
+        <td class="tagname"><a href="report-feature_3_1708112600.html">Admin Edit Product</a></td>
 
         <td      class="passed"    >56</td>
         <td >0</td>
@@ -389,7 +389,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">7</td>
 
-        <td class="duration" data-value="56213529200">56.213</td>
+        <td class="duration" data-value="57883871400">57.883</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -406,25 +406,25 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">4</td>
 
-        <td class="duration" data-value="18396298300">18.396</td>
+        <td class="duration" data-value="21072213300">21.072</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
         <td class="tagname"><a href="report-feature_5_3714669217.html">Order</a></td>
 
-        <td      class="passed"    >63</td>
-        <td      class="failed"    >1</td>
+        <td      class="passed"    >64</td>
+        <td >0</td>
         <td >0</td>
         <td >0</td>
         <td >0</td>
         <td class="total">64</td>
 
-        <td  class="passed"    >7</td>
-        <td  class="failed"    >1</td>
+        <td  class="passed"    >8</td>
+        <td >0</td>
         <td class="total">8</td>
 
-        <td class="duration" data-value="112535816800">1:52.535</td>
-        <td class="failed">Failed</td>
+        <td class="duration" data-value="109398563300">1:49.398</td>
+        <td class="passed">Passed</td>
       </tr>
       <tr>
         <td class="tagname"><a href="report-feature_6_3714669217.html">Order</a></td>
@@ -440,7 +440,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="16996835200">16.996</td>
+        <td class="duration" data-value="17643276800">17.643</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -457,7 +457,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="21907145600">21.907</td>
+        <td class="duration" data-value="21636737100">21.636</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -474,7 +474,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">6</td>
 
-        <td class="duration" data-value="31305581100">31.305</td>
+        <td class="duration" data-value="32938415600">32.938</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -491,7 +491,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="6102096100">6.102</td>
+        <td class="duration" data-value="6753968700">6.753</td>
         <td class="passed">Passed</td>
       </tr>
   </tbody>
@@ -499,33 +499,33 @@ $(document).ready(function() {
   <tfoot class="total">
     <tr>
       <td></td>
-      <td>266</td>
-      <td>2</td>
+      <td>268</td>
+      <td>0</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
       <td>268</td>
 
-      <td>37</td>
-      <td>2</td>
+      <td>39</td>
+      <td>0</td>
       <td>39</td>
 
-      <td class="duration">6:0.048</td>
+      <td class="duration">6:0.904</td>
       <td>10</td>
     </tr>
     <tr>
       <td></td>
-      <td>99.25%</td>
-      <td>0.75%</td>
+      <td>100.00%</td>
+      <td>0.00%</td>
       <td>0.00%</td>
       <td>0.00%</td>
       <td>0.00%</td>
       <td></td>
-      <td>94.87%</td>
-      <td>5.13%</td>
+      <td>100.00%</td>
+      <td>0.00%</td>
       <td></td>
       <td></td>
-      <td>80.00%</td>
+      <td>100.00%</td>
     </tr>
   </tfoot>
 </table>
