--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_1968059867.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_1968059867.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>TMDT</td>
         <td>1</td>
-      <td>28 Oct 2023, 21:48</td>
+      <td>20 Nov 2023, 22:50</td>
     </tr>
   </tbody>
 </table>
@@ -140,7 +140,7 @@ $(document).ready(function() {
           <td >0</td>
           <td class="total">1</td>
 
-          <td class="duration" data-value="12632724700">12.632</td>
+          <td class="duration" data-value="10173225500">10.173</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -173,7 +173,7 @@ $(document).ready(function() {
 <div class="element">
     <div class="indention">
       <b>Feature:</b>
-      <a href="report-feature_3_1708112600.html">Admin Add New Product</a>
+      <a href="report-feature_3_1708112600.html">Admin Edit Product</a>
     </div>
 
 
@@ -183,7 +183,7 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">12.632</span>
+  <span class="lead-duration duration">10.173</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-1">
@@ -258,7 +258,7 @@ $(document).ready(function() {
   <span class="keyword indention">Given</span>
   <span class="name">user click edit product button with product name is <span class="argument">&quot;T&#7909; d&aacute;n SMD&quot;</span></span>
 
-  <span class="lead-duration duration">1.212</span>
+  <span class="lead-duration duration">1.259</span>
 
 </div>
 
@@ -349,7 +349,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">user change product image with path <span class="argument">&quot;F:\LuanVan\tusmd.jpg&quot;</span></span>
 
-  <span class="lead-duration duration">10.287</span>
+  <span class="lead-duration duration">7.753</span>
 
 </div>
 
@@ -440,7 +440,7 @@ $(document).ready(function() {
   <span class="keyword indention">And</span>
   <span class="name">submit click add new product button</span>
 
-  <span class="lead-duration duration">1.040</span>
+  <span class="lead-duration duration">1.046</span>
 
 </div>
 
@@ -531,7 +531,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">user should see an success update message <span class="argument">&quot;C&#7853;p nh&#7853;t th&agrave;nh c&ocirc;ng !&quot;</span></span>
 
-  <span class="lead-duration duration">0.092</span>
+  <span class="lead-duration duration">0.113</span>
 
 </div>
 
@@ -640,7 +640,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.706</span>
+  <span class="lead-duration duration">0.701</span>
 
           </div>
 
