--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_2804680149.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_2804680149.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>TMDT</td>
         <td>1</td>
-      <td>28 Oct 2023, 21:48</td>
+      <td>20 Nov 2023, 22:50</td>
     </tr>
   </tbody>
 </table>
@@ -140,7 +140,7 @@ $(document).ready(function() {
           <td >0</td>
           <td class="total">1</td>
 
-          <td class="duration" data-value="15512371800">15.512</td>
+          <td class="duration" data-value="14456943100">14.456</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -183,14 +183,14 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">15.512</span>
+  <span class="lead-duration duration">14.456</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-1">
 
 <div class="brief passed">
   <span class="keyword indention">Scenario Outline</span>
-  <span class="name">Add New Product</span>
+  <span class="name">Create New Product</span>
 
 
      <i class="chevron fa fa-fw"></i>
@@ -258,7 +258,7 @@ $(document).ready(function() {
   <span class="keyword indention">Given</span>
   <span class="name">user click add new product button</span>
 
-  <span class="lead-duration duration">1.033</span>
+  <span class="lead-duration duration">1.072</span>
 
 </div>
 
@@ -349,7 +349,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">user input product information <span class="argument">&quot;T&#7909; g&#7889;m 104&quot;</span>, <span class="argument">&quot;s&#7843;n ph&#7849;m m&#7899;i nh&#7845;t c&#7911;a c&#7917;a h&agrave;ng&quot;</span>, <span class="argument">&quot;150000&quot;</span>, <span class="argument">&quot;T&#7909; &#273;i&#7879;n&quot;</span>, <span class="argument">&quot;150&quot;</span> , <span class="argument">&quot;2023/10/10&quot;</span> and path image <span class="argument">&quot;F:\LuanVan\104pi.jpg&quot;</span></span>
 
-  <span class="lead-duration duration">13.138</span>
+  <span class="lead-duration duration">12.069</span>
 
 </div>
 
@@ -440,7 +440,7 @@ $(document).ready(function() {
   <span class="keyword indention">And</span>
   <span class="name">submit click add new product button</span>
 
-  <span class="lead-duration duration">1.046</span>
+  <span class="lead-duration duration">1.035</span>
 
 </div>
 
@@ -531,7 +531,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">the list product page display new product on top list products with name is <span class="argument">&quot;T&#7909; g&#7889;m 104&quot;</span></span>
 
-  <span class="lead-duration duration">0.293</span>
+  <span class="lead-duration duration">0.278</span>
 
 </div>
 
@@ -640,7 +640,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.733</span>
+  <span class="lead-duration duration">0.756</span>
 
           </div>
 
