--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-feature_2_2637572631.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-feature_2_2637572631.html
@@ -41,7 +41,7 @@ $(document).ready(function() {
 
 
 
-<title>Cucumber Reports (no 1) - Feature: Admin Add New Product</title>
+<title>Cucumber Reports (no 1) - Feature: Admin DeleteProduct</title>
 
 </head>
 <body>
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>TMDT</td>
         <td>1</td>
-      <td>28 Oct 2023, 21:48</td>
+      <td>20 Nov 2023, 22:50</td>
     </tr>
   </tbody>
 </table>
@@ -128,7 +128,7 @@ $(document).ready(function() {
 
         <tbody>
         <tr>
-          <td class="tagname">Admin Add New Product</td>
+          <td class="tagname">Admin DeleteProduct</td>
           <td      class="passed"    >8</td>
           <td >0</td>
           <td >0</td>
@@ -140,7 +140,7 @@ $(document).ready(function() {
           <td >0</td>
           <td class="total">1</td>
 
-          <td class="duration" data-value="5017452600">5.017</td>
+          <td class="duration" data-value="5631280400">5.631</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -175,7 +175,7 @@ $(document).ready(function() {
 
 <div class="brief passed">
   <span class="keyword indention">Feature</span>
-  <span class="name">Admin Add New Product</span>
+  <span class="name">Admin DeleteProduct</span>
 
 
 </div>
@@ -191,7 +191,7 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">3.630</span>
+  <span class="lead-duration duration">4.136</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-1">
@@ -234,7 +234,7 @@ $(document).ready(function() {
   <span class="keyword indention">Given</span>
   <span class="name">user navigate to Login page <span class="argument">&quot;http://localhost:5173/login&quot;</span></span>
 
-  <span class="lead-duration duration">1.363</span>
+  <span class="lead-duration duration">1.865</span>
 
 </div>
 
@@ -325,7 +325,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">user enter email <span class="argument">&quot;thuan@gmail.com&quot;</span> and password: <span class="argument">&quot;thuan123&quot;</span></span>
 
-  <span class="lead-duration duration">1.225</span>
+  <span class="lead-duration duration">1.235</span>
 
 </div>
 
@@ -416,7 +416,7 @@ $(document).ready(function() {
   <span class="keyword indention">And</span>
   <span class="name">click login button</span>
 
-  <span class="lead-duration duration">1.040</span>
+  <span class="lead-duration duration">1.034</span>
 
 </div>
 
@@ -611,7 +611,7 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">1.386</span>
+  <span class="lead-duration duration">1.494</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-11">
@@ -777,7 +777,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">user click delete product button with product name is <span class="argument">&quot;T&#7909; d&aacute;n SMD&quot;</span></span>
 
-  <span class="lead-duration duration">1.211</span>
+  <span class="lead-duration duration">1.277</span>
 
 </div>
 
@@ -959,7 +959,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">user should see an success delete message <span class="argument">&quot;X&oacute;a th&agrave;nh c&ocirc;ng !&quot;</span></span>
 
-  <span class="lead-duration duration">0.168</span>
+  <span class="lead-duration duration">0.209</span>
 
 </div>
 
@@ -1068,7 +1068,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.712</span>
+  <span class="lead-duration duration">0.691</span>
 
           </div>
 
