--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_141217891.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_141217891.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>TMDT</td>
         <td>1</td>
-      <td>28 Oct 2023, 21:48</td>
+      <td>20 Nov 2023, 22:50</td>
     </tr>
   </tbody>
 </table>
@@ -140,7 +140,7 @@ $(document).ready(function() {
           <td >0</td>
           <td class="total">1</td>
 
-          <td class="duration" data-value="1386662200">1.386</td>
+          <td class="duration" data-value="1494499000">1.494</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -173,7 +173,7 @@ $(document).ready(function() {
 <div class="element">
     <div class="indention">
       <b>Feature:</b>
-      <a href="report-feature_2_2637572631.html">Admin Add New Product</a>
+      <a href="report-feature_2_2637572631.html">Admin DeleteProduct</a>
     </div>
 
 
@@ -183,7 +183,7 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">1.386</span>
+  <span class="lead-duration duration">1.494</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-1">
@@ -349,7 +349,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">user click delete product button with product name is <span class="argument">&quot;T&#7909; d&aacute;n SMD&quot;</span></span>
 
-  <span class="lead-duration duration">1.211</span>
+  <span class="lead-duration duration">1.277</span>
 
 </div>
 
@@ -531,7 +531,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">user should see an success delete message <span class="argument">&quot;X&oacute;a th&agrave;nh c&ocirc;ng !&quot;</span></span>
 
-  <span class="lead-duration duration">0.168</span>
+  <span class="lead-duration duration">0.209</span>
 
 </div>
 
@@ -640,7 +640,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.712</span>
+  <span class="lead-duration duration">0.691</span>
 
           </div>
 
